# effect-doctor

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
bench/: RESULTS.md  run.sh
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lsp.rs  main.rs
crates/cli/tests/: e2e.rs
crates/core/: Cargo.toml
crates/core/src/: content_addr.rs  cycles.rs  deep.rs  diagnostics.rs  effect_imports.rs  engine.rs  examples.rs  fn_index.rs  git_scope.rs  index.rs  lib.rs  lint.rs  matchers.rs  runner.rs  score.rs  structural.rs  symbol_graph.rs  walk.rs
crates/core/src/rules/: adopt.rs  agent_hygiene.rs  catch_idioms.rs  composition_limits.rs  concurrency_idioms.rs  equality_idioms.rs  error_modeling.rs  function_metrics.rs  gen_shape.rs  globals_in_effect.rs  idiom_shortcuts.rs  interruption.rs  literal_idioms.rs  logging_security.rs  map_misuse.rs  meaningful_span_names.rs  mod.rs  module_conventions.rs  no_chained_provides.rs  no_effect_do.rs  no_manual_sql_transactions.rs  no_or_die.rs  no_run_inside_effect.rs  no_throw_in_effect.rs  no_try_catch_in_gen.rs  no_unbounded_concurrency.rs  no_unnecessary_fail.rs  no_unnecessary_gen.rs  oop_to_effect.rs  prefer_clock_service.rs  prefer_effect_fn.rs  prefer_effect_logging.rs  prefer_it_effect.rs  prefer_node_counterparts.rs  prefer_random_service.rs  prefer_tagged_error_classes.rs  promise_interop.rs  require_yield_star.rs  retry_only_retryable.rs  run_sync_async.rs  (+8 more)
crates/core/tests/: adopt.rs  agent.rs  architecture_perf.rs  catalog.rs  correctness.rs  cross_file.rs  engine.rs  gen_shape.rs  idiomatic.rs  oop_to_effect.rs  ts_safety.rs  v4_migration.rs
crates/core/tests/common/: mod.rs
crates/impact/src/: lib.rs
crates/orchestrator/src/: executor.rs  footprint.rs  lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: glob.rs  lease.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: dispatch.rs  lib.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: lib.rs  oplog.rs  repo.rs
docs/: ARCHITECTURE.md  INTEGRATIONS.md  PLAN.md  RULES.md  TOOLKIT.md
fixtures/: aliased.ts  bad.ts  clean.ts  idioms.ts  misc.ts  package.json  v4.ts
npm/agent-doctor/: package.json
npm/effect-doctor/: package.json
plugins/agent-doctor/: .mcp.json
plugins/agent-doctor/.claude-plugin/: plugin.json
plugins/agent-doctor/commands/: gate.md  impact.md  verify.md
plugins/agent-doctor/hooks/: commit-gate.sh  hooks.json
plugins/agent-doctor/skills/agent-doctor/: SKILL.md
site/: astro.config.mjs  package-lock.json  package.json
site/scripts/: generate-og.mjs
site/src/data/: rules.json
site/src/pages/: index.astro  playground.astro
