[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/wasm"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JGalbss/agent-doctor"

[workspace.dependencies]
agent_doctor_core = { path = "crates/core" }

oxc_allocator = "0.135"
oxc_parser = "0.135"
oxc_ast = "0.135"
oxc_ast_visit = "0.135"
oxc_semantic = "0.135"
oxc_span = "0.135"
oxc_syntax = "0.135"
oxc_diagnostics = "0.135"

ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
