[package]
name = "effect-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "effect-doctor"
path = "src/main.rs"

[dependencies]
effect_doctor_core.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
anstyle = "1"
