[package]
name = "agent-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-doctor"
path = "src/main.rs"

[dependencies]
agent_doctor_core.workspace = true
agent_doctor_impact.workspace = true
agent_doctor_policy.workspace = true
agent_doctor_merge.workspace = true
agent_doctor_server.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
anstyle = "1"
lsp-server = "0.7"
lsp-types = "=0.94.1"
