[package]
name = "effect_doctor_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_ast_visit.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true
ignore.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
