[package]
name = "agent_doctor_server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent_doctor_core.workspace = true
agent_doctor_impact.workspace = true
agent_doctor_policy.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
